src/: Refactor all src css files to contain their own dependencies

--- a/src/align.css
+++ b/src/align.css
@@ -1,10 +1,15 @@
-/* Basscss Align */
+.align-baseline {
+  vertical-align: baseline;
+}
 
-.align-baseline { vertical-align: baseline }
+.align-top {
+  vertical-align: top;
+}
 
-.align-top      { vertical-align: top }
+.align-middle {
+  vertical-align: middle;
+}
 
-.align-middle   { vertical-align: middle }
-
-.align-bottom   { vertical-align: bottom }
-
+.align-bottom {
+  vertical-align: bottom;
+}
