--- a/src/btn-primary.css
+++ b/src/btn-primary.css
@@ -1,4 +1,11 @@
-/* Basscss Btn Primary */
+@import './vars/_borders.css';
+@import './vars/_colors.css';
+@import './vars/_shades.css';
+
+:root {
+  --button-color: #fff;
+  --button-background-color: var(--blue);
+}
 
 .btn-primary {
   color: var(--button-color);
@@ -12,22 +19,10 @@
 
 .btn-primary:active {
   box-shadow: inset 0 0 0 20rem var(--darken-2),
-    inset 0 3px 4px 0 var(--darken-3),
-    0 0 1px var(--darken-2);
+    inset 0 3px 4px 0 var(--darken-3), 0 0 1px var(--darken-2);
 }
 
 .btn-primary:disabled,
 .btn-primary.is-disabled {
-  opacity: .5;
+  opacity: 0.5;
 }
-
-:root {
-  --blue: #0074d9;
-  --button-color: #fff;
-  --button-background-color: var(--blue);
-  --border-radius: 3px;
-  --darken-1: rgba(0, 0, 0, .0625);
-  --darken-2: rgba(0, 0, 0, .125);
-  --darken-3: rgba(0, 0, 0, .25);
-}
-
