--- a/src/base-forms.css
+++ b/src/base-forms.css
@@ -1,6 +1,10 @@
-/* Basscss Base Forms */
-
-@import 'basscss-defaults';
+:root {
+  --form-field-font-family: inherit;
+  --form-field-font-size: 1rem;
+  --form-field-height: 2.25rem;
+  --form-field-padding-y: 0.5rem;
+  --form-field-padding-x: 0.5rem;
+}
 
 input,
 select,
@@ -17,19 +21,19 @@ label {
   vertical-align: middle;
 }
 
-input[type=text],
-input[type=date],
-input[type=datetime],
-input[type=datetime-local],
-input[type=email],
-input[type=month],
-input[type=number],
-input[type=password],
-input[type=search],
-input[type=tel],
-input[type=time],
-input[type=url],
-input[type=week] {
+input[type='text'],
+input[type='date'],
+input[type='datetime'],
+input[type='datetime-local'],
+input[type='email'],
+input[type='month'],
+input[type='number'],
+input[type='password'],
+input[type='search'],
+input[type='tel'],
+input[type='time'],
+input[type='url'],
+input[type='week'] {
   height: var(--form-field-height);
   padding: var(--form-field-padding-y) var(--form-field-padding-x);
   vertical-align: middle;
@@ -50,12 +54,3 @@ textarea {
   line-height: 1.75;
   padding: var(--form-field-padding-y) var(--form-field-padding-x);
 }
-
-:root {
-  --form-field-font-family: inherit;
-  --form-field-font-size: 1rem;
-  --form-field-height: 2.25rem;
-  --form-field-padding-y: .5rem;
-  --form-field-padding-x: .5rem;
-}
-
