--- a/src/borders.css
+++ b/src/borders.css
@@ -1,4 +1,4 @@
-/* Basscss Borders */
+@import './vars/_borders.css';
 
 .border {
   border-style: solid;
@@ -30,17 +30,30 @@
   border-left-color: var(--border-color);
 }
 
-.border-none { border: 0 }
+.border-none {
+  border: 0;
+}
 
-.rounded { border-radius: var(--border-radius) }
-.circle  { border-radius: 50% }
+.rounded {
+  border-radius: var(--border-radius);
+}
+.circle {
+  border-radius: 50%;
+}
 
-.rounded-top    { border-radius: var(--border-radius) var(--border-radius) 0 0 }
-.rounded-right  { border-radius: 0 var(--border-radius) var(--border-radius) 0 }
-.rounded-bottom { border-radius: 0 0 var(--border-radius) var(--border-radius) }
-.rounded-left   { border-radius: var(--border-radius) 0 0 var(--border-radius) }
+.rounded-top {
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
+}
+.rounded-right {
+  border-radius: 0 var(--border-radius) var(--border-radius) 0;
+}
+.rounded-bottom {
+  border-radius: 0 0 var(--border-radius) var(--border-radius);
+}
+.rounded-left {
+  border-radius: var(--border-radius) 0 0 var(--border-radius);
+}
 
-.not-rounded { border-radius: 0 }
-
-@import 'basscss-defaults';
-
+.not-rounded {
+  border-radius: 0;
+}
