--- a/src/color-base.css
+++ b/src/color-base.css
@@ -1,6 +1,18 @@
-/* Basscss Color Base */
+@import './vars/_borders.css';
+@import './vars/_colors.css';
 
-@import 'basscss-defaults';
+:root {
+  --body-color: var(--black);
+  --body-background-color: var(--white);
+  --link-color: var(--blue);
+  --link-text-decoration: none;
+  --link-hover-text-decoration: underline;
+  --pre-background-color: transparent;
+  --pre-border-radius: var(--border-radius);
+  --rule-border-style: solid;
+  --rule-border-width: var(--border-width);
+  --rule-border-color: var(--border-color);
+}
 
 body {
   color: var(--body-color);
@@ -16,7 +28,8 @@ a:hover {
   text-decoration: var(--link-hover-text-decoration);
 }
 
-pre, code {
+pre,
+code {
   background-color: var(--pre-background-color);
   border-radius: var(--pre-border-radius);
 }
@@ -27,17 +40,3 @@ hr {
   border-bottom-width: var(--rule-border-width);
   border-bottom-color: var(--rule-border-color);
 }
-
-:root {
-  --body-color: var(--black);
-  --body-background-color: var(--white);
-  --link-color: var(--blue);
-  --link-text-decoration: none;
-  --link-hover-text-decoration: underline;
-  --pre-background-color: transparent;
-  --pre-border-radius: var(--border-radius);
-  --rule-border-style: solid;
-  --rule-border-width: var(--border-width);
-  --rule-border-color: var(--border-color);
-}
-
