--- a/src/color-forms.css
+++ b/src/color-forms.css
@@ -1,4 +1,13 @@
-/* Basscss Color Forms */
+@import './vars/_borders.css';
+@import './vars/_colors.css';
+@import './vars/_shades.css';
+
+:root {
+  --field-focus-color: var(--blue);
+  --field-success-color: var(--green);
+  --field-warning-color: var(--yellow);
+  --field-error-color: var(--red);
+}
 
 @import 'basscss-defaults';
 
@@ -13,13 +22,13 @@
 .field.is-focused {
   outline: none;
   border-color: var(--field-focus-color);
-  box-shadow: 0 0 0 2px color(var(--field-focus-color) a(.5));
+  box-shadow: 0 0 0 2px color(var(--field-focus-color) a(0.5));
 }
 
 .field:disabled,
 .field.is-disabled {
   background-color: var(--darken-2);
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .field:read-only:not(select),
@@ -27,14 +36,13 @@
   background-color: var(--darken-2);
 }
 
-
 .field.is-success {
   border-color: var(--field-success-color);
 }
 
 .field.is-success:focus,
 .field.is-success.is-focused {
-  box-shadow: 0 0 0 2px color(var(--field-success-color) a(.5));
+  box-shadow: 0 0 0 2px color(var(--field-success-color) a(0.5));
 }
 
 .field.is-warning {
@@ -43,7 +51,7 @@
 
 .field.is-warning:focus,
 .field.is-warning.is-focused {
-  box-shadow: 0 0 0 2px color(var(--field-warning-color) a(.5));
+  box-shadow: 0 0 0 2px color(var(--field-warning-color) a(0.5));
 }
 
 .field:invalid,
@@ -55,13 +63,5 @@
 .field:invalid.is-focused,
 .field.is-error:focus,
 .field.is-error.is-focused {
-  box-shadow: 0 0 0 2px color(var(--field-error-color) a(.5));
+  box-shadow: 0 0 0 2px color(var(--field-error-color) a(0.5));
 }
-
-:root {
-  --field-focus-color: var(--blue);
-  --field-success-color: var(--green);
-  --field-warning-color: var(--yellow);
-  --field-error-color: var(--red);
-}
-
